Fixed some text spacing issues

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -43,17 +43,18 @@ article h1 {
   color: #F9AF48;
   font-size: 2.6em;
   font-weight: bold;
+  margin-bottom: 0;
 }
 
 article h2 {
   color: #F9AF48;
   font-size: 1.8em;
-  // font-weight: bold;
+  margin-bottom: 0;
 }
 
 article p {
   font-size: 1.6em;
-  margin: 1em 0;
+  margin: 0 0 1em 0;
 }
 
 /* stick-footer */
